--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <td><img src="/static/house.jpg" width="500" height="600"></td>
             <td>   
                <form action = "/result" method = "POST">
-                  <p>House size <input type = "number" name = "house_size" /> feet^2</p>
+                  <p>House size <input type = "number" name = "house_size" /> feet<sup>2</sup></p>
                   <p>Num of bedrooms <input type = "number" name = "num_of_bedrooms" /></p>
                   <p><button id="button" class="btn btn-lg btn-primary btn-block" type="button">Submit</button></p>
                   <p>Predicted house price =  <span id=result></span> USD</p>
